# unreal_ros_pkgs

./: README.md
modul_spawner_msgs/: CMakeLists.txt  package.xml
modul_spawner_msgs/srv/: SpawnRobot.srv
unreal_msgs/: CMakeLists.txt  package.xml
unreal_msgs/msg/: InstanceId.msg  MeshDescription.msg  ModelDescription.msg  StaticMeshDescription.msg  Tag.msg  TagMsg.msg
unreal_msgs/src/: spawner_client.cpp
unreal_msgs/src/example_test_clients/: delete_model_client.cpp  relocation_client.cpp  spawn_multiple_models_client.cpp  spawn_semantic_map_client.cpp  spawner_client.cpp
unreal_msgs/srv/: DeleteModel.srv  SetModelPose.srv  SpawnModel.srv  SpawnMultipleModels.srv  SpawnSemanticMap.srv  delete_model.srv  relocate_model.srv  spawn_model.srv
unreal_vis_msgs/: CMakeLists.txt  package.xml
unreal_vis_msgs/srv/: DisplayBasicMarker.srv  DisplayTrajectory.srv  RemoveMarker.srv
unreal_world_control_msgs/: CMakeLists.txt  package.xml
unreal_world_control_msgs/msg/: AngularLimits.msg  LinearLimits.msg  ModelDescription.msg  PhysicsConstraintDetails.msg
unreal_world_control_msgs/srv/: AttachModelToParent.srv  ChangeVisualOfModel.srv  DeleteModel.srv  HighlightModels.srv  SetModelPose.srv  SpawnModel.srv  SpawnMultipleModels.srv  SpawnPhysicsConstraint.srv
world_control_msgs/: CMakeLists.txt  package.xml
world_control_msgs/msg/: AngularLimits.msg  ConstraintDescription.msg  LinearLimits.msg  ModelDescription.msg  PhysicsConstraintDetails.msg  PhysicsProperties.msg  RelationDescription.msg  Tag.msg
world_control_msgs/srv/: AttachModelToParent.srv  ChangeMaterial.srv  ChangePhysicsProperties.srv  Checkpoint.srv  DeleteAll.srv  DeleteModel.srv  GetModelPose.srv  GetModelSocketPose.srv  HighlightModel.srv  HighlightModels.srv  MoveObject.srv  ObjectToObjectState.srv  SetModelPose.srv  SetPhysicsProperties.srv  SpawnModel.srv  SpawnPhysicsConstraint.srv  SpawnProMesh.srv  SpawnSemanticMap.srv
