<?xml version="1.0"?>
<package format="2">
  <name>modul_spawner_msgs</name>
  <version>1.0.0</version>
  <description>The modul_spawner_msgs package</description>


  <maintainer email="Leusmann@uni-bremen.de">Nils Leusmann</maintainer>
  <author email="Leusmann@uni-bremen.de">Nils Leusmann</author>
  <license>BSD</license>


  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
